# esp32_mqtt_logger

./: .gitignore  .mcp.json  CLAUDE.md  CMakeLists.txt
main/: CMakeLists.txt  main.c
src/: CMakeLists.txt  idf_component.yml
src/bme680/: bme680.cpp  bme680.hpp
src/config/: config.c  config.h
src/i2c/: i2c.cpp  i2c.hpp
src/main/: main.c  main.cpp
src/mpu6050/: mpu6050.cpp  mpu6050.hpp
src/mqtt/: mqtt.c  mqtt.h
src/oled/: oled.cpp  oled.hpp
src/sntp/: sntp.cpp  sntp.hpp
src/wifi/: wifi.c  wifi.h
